<resources>
	<string name="app_name">KExpert</string>
	<string name="main_tv_volume">Activity Module</string>
	<string name="main_tv_intent">Intent Module</string>
	<string name="main_tv_fragment">Fragment Module</string>
	<string name="main_tv_list">List Module</string>
	<string name="main_tv_debugging">Debugging Module</string>

	<string name="main_volume_tv_length">Length</string>
	<string name="main_volume_tv_width">Width</string>
	<string name="main_volume_tv_height">Height</string>
	<string name="main_volume_btn_calculate">Calculate</string>
	<string name="main_volume_tv_result">Result</string>

	<string name="main_intent_tv_Move">Move Activity</string>
	<string name="main_intent_tv_MoveWithData">Move Activity With Data</string>
	<string name="main_intent_tv_MoveWithObject">Move Activity With Object</string>
	<string name="main_intent_tv_DialNumber">Dial a Number</string>
	<string name="main_intent_tv_MoveWithResult">Move Activity With Result</string>
	<string name="main_intent_tv_ActivityDataMove">Data Received</string>
	<string name="main_intent_tv_ResultFromActivity">Result For Result Activity</string>

	<string name="main_fm_tv_Title">Fragment Home</string>
	<string name="category_fm_tv_Title">Fragment Category</string>
	<string name="main_fm_btn_Category">Category</string>
	<string name="category_main_fm_btn_PopularBrands">Popular Brands</string>
	<string name="category_main_fm_btn_KalpaLuxe">Kalpa Luxe</string>
	<string name="category_main_fm_btn_Lifestyle">Lifestyle</string>
	<string name="dtl_category_fm_tv_profile">Profile</string>
	<string name="dtl_category_fm_tv_dialog">Show Dialog</string>

	<string name="main_list_tv_array_adapter">Array Adapter</string>
	<string name="main_list_tv_custom_adapter">Custom Adapter</string>

	<string name="main_debugging_tv_debug_alpha">Debug #1</string>
	<string name="alpha_dbg_tv_result">Result</string>
	<string name="alpha_dbg_tv_set_value">Set Value</string>

	<string name="move_intent_tv_result">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dictum scelerisque mi pellentesque dignissim.
		Mauris quis ultricies nisi.
		Sed eget sem vitae nisi lobortis eleifend euismod ac ipsum. Curabitur quis leo placerat, ullamcorper lorem eu,
		iaculis sapien.
		Donec nec venenatis velit, tincidunt volutpat leo. Nullam vel luctus felis, commodo dignissim turpis. Ut gravida
		tempor justo sit amet volutpat.
		Donec venenatis ex vitae viverra egestas. Etiam ornare diam vel euismod viverra. Cras rutrum auctor libero non
	</string>
	<string name="result_intent_tv_choose_number">Choose the number you want</string>
	<string name="result_intent_tv_50">50</string>
	<string name="result_intent_tv_100">100</string>
	<string name="result_intent_tv_150">150</string>
	<string name="result_intent_tv_200">200</string>
	<string name="result_intent_tv_choose">Choose</string>

	<string name="dialog_fm_tv_question_coach">Who is AC Milan\'s most successful coach?</string>
	<string name="dialog_fm_tv_helbert_kilpin">Herbert Kilpin</string>
	<string name="dialog_fm_tv_arrigo_sacchi">Arrigo Sacchi</string>
	<string name="dialog_fm_tv_carlo_ancelotti">Carlo Ancelotti</string>
	<string name="dialog_fm_tv_fabio_capello">Fabio Capello</string>
	<string name="dialog_fm_tv_noreo_rocco">Noreo Rocco</string>
	<string name="dialog_fm_tv_choose">Choose</string>
	<string name="dialog_fm_tv_close">Close</string>

	<string name="custom_list_tv_player_name">Player Name</string>
	<string name="custom_list_tv_player_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
		dictum
		scelerisque mi pellentesque dignissim.
	</string>

	<string-array name="data_playar_name">
		<item>GK - Dida</item>
		<item>CB - Nesta</item>
		<item>CB - Maldini</item>
		<item>LB - Cafu</item>
		<item>RB - Serginho</item>
		<item>CMF - Pirlo</item>
		<item>RMF - Gattuso</item>
		<item>LMF - Seedorf</item>
		<item>AMF - Rui Costa</item>
		<item>CF - Shevchenko</item>
		<item>CF - Inzaghi</item>
	</string-array>
	<string-array name="data_player_description">
		<item>Acquired in 1999 from Cruzeiro, Nelson Dida played for Lugano and Corinthians before consolidating his
			position as AC Milan’s first-choice goalkeeper starting from 2002. He was the key player in the Champions League
			final against Juventus, saving three penalty kicks at Old Trafford in Manchester. Repeated success in Athens in
			2007, when the Rossoneri beat Liverpool. Considered one of the best goalkeepers in the third millennium, he also
			won a league title, an Italian League Super Cup, two European Cup Winners’ Cups and a Club World Cup.
		</item>
		<item>Defensive pivot at the most successful Lazio in the club’s history, Alessandro Nesta arrived at Milanello in
			his full maturity. He reminded fans of the best Baresi for his class, positioning and timely closing. He
			significantly helped Milan win the most prestigious trophies. Infallible was his penalty kick in the final in
			Manchester against Juventus, and amazing was his goal to Boca Juniors when Milan became the most successful club
			in the world.
		</item>
		<item>902 official matches played and 26 trophies won in twenty-five years in Milan jersey. There are no words to
			describe the football career of Paolo Maldini who made his debut as a very young boy in Udine, on 20 January 1985,
			with coach Nils Liedholm on the bench. A triumphal ride initiated with Arrigo Sacchi and continued with Capello.
			In 1997 he inherited the captain’s armband from Baresi and lifted new trophies with Zaccheroni and Ancelotti. The
			apotheosis came on 28 May 2003, when after 40 years from Milan’s first European Champion Clubs’ Cup win, he
			lifted, just like his father Cesare, the Champions League trophy at Old Trafford in Manchester."
		</item>
		<item>After three consecutive world cup finals and a legendary Scudetto with Roma, Cafu joined AC Milan in 2003. Not
			content with the numerous achievements already attained, Brazil’s captain proved to be one of the best right
			wingers in the world, untiringly fulfilling his duty in his playing position. He soon won a championship and a
			European Super Cup, but the big objective was for Milan the Champions League, the only trophy missing in Cafu’s
			honours: it came on 23 May 2007, followed by the Club World Cup a few months later.
		</item>
		<item>Arrived at AC Milan in the summer of 1999 to support Bierhoff’s masterful skills in the air, Serginho ended up
			making the fortunes of Inzaghi and Shevchenko who scored an impressive number of goals taking advantage of his
			precise assists. Left back with a high propensity to get forward, he was also an excellent crosser who scored his
			fair share of goals. The Brazilian’s incredible performance in the 2001 derby, including three assists and a goal,
			helped Milan to a clear 6-0 win. Serginho proved to be decisive also in the Champions League final in 2003, when
			in the penalty shootout he put his penalty past Buffon contributing to Milan’s victory over Juventus.
		</item>
		<item>Coming from the prolific youth sector of Brescia, Andrea Pirlo arrived at AC Milan in 2001. Carlo Ancelotti
			initially deployed him in his natural position of attacking midfielder, then he moved him slightly backwards and
			made of him one of the best deep-lying playmakers in the world. It was the start of a triumphal era for the
			Rossoneri that dominated the world again thanks to the balance and pace given by the new Metronome. In ten years
			he won 2 league titles, an Italian Cup, an Italian League Super Cup, a Champions League, 2 European Super Cups and
			a Club World Cup.
		</item>
		<item>After his debut in Serie A with Perugia, Rino Gattuso moved to Glasgow Rangers, where he further developed his
			fighting qualities. Following a period with Salernitana Gattuso joined AC Milan. Highly appreciated by the fans
			for his generosity, he perfectly integrated with Andrea Pirlo, with whom he formed a successful pair also in the
			national team. In his 13 years at Milan he won 10 titles, including 2 league titles, 2 Champions League titles and
			a Club World Cup.
		</item>
		<item>Born in Suriname, Clarence Seedorf, thanks to his brilliant technique and extraordinary tactical intelligence,
			is the only player who has won the Champions league with three different clubs. As the youngest debutant for Ajax
			ever, he quickly made an amazing career winning the top continental club competition with the Lancers in 1995,
			then replicating the European success in 1998 with Real Madrid. After a spell at Inter, he moved to AC Milan in
			2002. In 10 seasons with the Rossoneri, he won numerous trophies in Italy and Europe, two more Champions League
			titles, 2 league titles and a Club Word Cup.
		</item>
		<item>Spotted by the legend of Portuguese football Eusebio, Rui Consta started out in the youth sector of Benfica at
			9 years of age. Leader of the extraordinary generation that won the Under-20 World Cup on home soil, in 1994 he
			moved to Fiorentina. Seven years of excellent passing earned him the attention of AC Milan that signed him in
			summer 2001. It’s the start of three seasons during which the remarkable number ten won a Scudetto, an Italian
			Cup, an Italian League Super Cup, a Champions League and a European Super Cup.
		</item>
		<item>The prototype of modern-day striker, Andriy Shevchenko arrived at Milanello in 1999, after winning 5 league
			titles with Dinamo Kiev under the guidance of his mentor Valeriy Lobanovski. The Ukrainian quickly adjusted to
			Serie A, and managed to win in his debut season the league scoring title with 24 goals. Deft with both feet, full
			of speed and power in the air, Sheva scored the unforgettable winning penalty with incredibly high concentration
			and precision in the 2003 Champions League final. Only Nordahl scored for Milan more goals than he did.
		</item>
		<item>Filippo Inzaghi started his football career in the youth sector of Piacenza, played for several clubs,
			including Leffe, Parma, Atalanta and Juventus, scoring an impressive number of goals. At the peak of his career he
			arrived at AC Milan. In the jersey of the Rossoneri ‘Superpippo’ exploded scoring a plethora of goals, including a
			decisive brace in the Champions League final revenge in Athens, repeated at the Club World Cup against Boca
			Juniors. He finished his adventure with Milan as a footballer with 126 goals and 300 official appearances, along
			with a long series of trophies.
		</item>
	</string-array>
	<string-array name="data_player_photo">
		<item>@drawable/dida</item>
		<item>@drawable/nesta</item>
		<item>@drawable/paolo_maldini</item>
		<item>@drawable/cafu</item>
		<item>@drawable/serginho</item>
		<item>@drawable/pirlo</item>
		<item>@drawable/gattuso</item>
		<item>@drawable/seedorf</item>
		<item>@drawable/rui_costa</item>
		<item>@drawable/shevchenko</item>
		<item>@drawable/inzaghi</item>
	</string-array>
</resources>