<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/padding_default"
		tools:context=".fragment.OptionDialogFragment">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:text="@string/dialog_fm_tv_question_coach"/>
	<RadioGroup
			android:id="@+id/dialog_fm_rdg_options"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<RadioButton
				android:id="@+id/dialog_fm_rb_kilpin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/dialog_fm_tv_helbert_kilpin"/>
		<RadioButton
				android:id="@+id/dialog_fm_rb_sacchi"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/dialog_fm_tv_arrigo_sacchi"/>
		<RadioButton
				android:id="@+id/dialog_fm_rb_ancelotti"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/dialog_fm_tv_carlo_ancelotti"/>
		<RadioButton
				android:id="@+id/dialog_fm_rb_capello"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/dialog_fm_tv_fabio_capello"/>
		<RadioButton
				android:id="@+id/dialog_fm_rb_rocco"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/dialog_fm_tv_noreo_rocco"/>
	</RadioGroup>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<Button
				android:id="@+id/dialog_fm_btn_choose"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:layout_marginStart="4dp"
				android:layout_weight="0.5"
				android:text="@string/dialog_fm_tv_choose"/>
		<Button
				android:id="@+id/dialog_fm_btn_close"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="4dp"
				android:layout_marginRight="4dp"
				android:layout_weight="0.5"
				android:text="@string/dialog_fm_tv_close"/>
	</LinearLayout>
</LinearLayout>