<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/padding_default"
              tools:context=".intent.IntentMoveResultActivity">

		<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/padding_default"
						android:text="@string/result_intent_tv_choose_number" />
		<RadioGroup
						android:id="@+id/rdg_result_number"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">
				<RadioButton
								android:id="@+id/rb_result_50"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="16dp"
								android:text="@string/result_intent_tv_50" />
				<RadioButton
								android:id="@+id/rb_result_100"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="16dp"
								android:text="@string/result_intent_tv_100" />
				<RadioButton
								android:id="@+id/rb_result_150"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="16dp"
								android:text="@string/result_intent_tv_150" />
				<RadioButton
								android:id="@+id/rb_result_200"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="16dp"
								android:text="@string/result_intent_tv_200" />
		</RadioGroup>
		<Button
						android:id="@+id/btn_result_choose"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/result_intent_tv_choose" />
</LinearLayout>