<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="@dimen/padding_default"
				android:orientation="vertical"
				tools:context=".volume.MainVolumeActivity">

		<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/main_volume_tv_length" />
		<EditText
						android:id="@+id/et_length"
						android:inputType="numberDecimal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:lines="1" />

		<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/main_volume_tv_width" />
		<EditText
						android:id="@+id/et_width"
						android:inputType="numberDecimal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:lines="1" />

		<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/main_volume_tv_height" />
		<EditText
						android:id="@+id/et_height"
						android:inputType="numberDecimal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:lines="1" />

		<Button
						android:id="@+id/btn_calculate"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/main_volume_btn_calculate" />
		<TextView
						android:id="@+id/tv_result"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/main_volume_tv_result"
						android:textSize="24sp"
						android:textStyle="bold" />

</LinearLayout>